[gd_scene load_steps=22 format=3 uid="uid://bxmw7cer0hljd"]

[ext_resource type="Script" path="res://Visuals/UI/UISkills.gd" id="1_2rujr"]
[ext_resource type="Texture2D" uid="uid://twt6fee3jeri" path="res://Visuals/UI/skill1normal.png" id="1_ixqpu"]
[ext_resource type="Texture2D" uid="uid://8cwwxobn6fvi" path="res://Visuals/UI/ult.png" id="2_dacox"]
[ext_resource type="Texture2D" uid="uid://bnxrxams43yf3" path="res://Visuals/UI/skill1holdorcool.png" id="2_mew4d"]
[ext_resource type="Texture2D" uid="uid://pnmeti7vdwf6" path="res://Visuals/UI/ult0.png" id="3_0ne0h"]
[ext_resource type="FontFile" uid="uid://bu4ut4acw6q7n" path="res://Silver.ttf" id="3_wccsu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vogsa"]
atlas = ExtResource("2_dacox")
region = Rect2(0, 0, 142, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcqsg"]
atlas = ExtResource("3_0ne0h")
region = Rect2(0, 0, 142, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_h82jx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vogsa")
}],
"loop": false,
"name": &"ult",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcqsg")
}],
"loop": false,
"name": &"ultcooldown",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_y4nth"]
atlas = ExtResource("1_ixqpu")
region = Rect2(36, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3v7r"]
atlas = ExtResource("2_mew4d")
region = Rect2(36, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_okn2m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4nth")
}],
"loop": false,
"name": &"Skill1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3v7r")
}],
"loop": false,
"name": &"Skill1hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vy1jy"]
atlas = ExtResource("1_ixqpu")
region = Rect2(0, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnxyp"]
atlas = ExtResource("2_mew4d")
region = Rect2(0, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_5q68d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy1jy")
}],
"loop": false,
"name": &"Skill2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnxyp")
}],
"loop": false,
"name": &"Skill2hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_txnrt"]
atlas = ExtResource("1_ixqpu")
region = Rect2(108, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_apfxh"]
atlas = ExtResource("2_mew4d")
region = Rect2(108, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_hulyw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txnrt")
}],
"loop": false,
"name": &"Skill3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_apfxh")
}],
"loop": false,
"name": &"Skill3hold",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_24ubf"]
atlas = ExtResource("1_ixqpu")
region = Rect2(144, 0, 36, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jsmf"]
atlas = ExtResource("2_mew4d")
region = Rect2(144, 0, 36, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_1pm42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24ubf")
}],
"loop": false,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jsmf")
}],
"loop": false,
"name": &"Jumphold",
"speed": 5.0
}]

[node name="UISkills" type="Control" groups=["uihandlers"]]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2rujr")

[node name="ultbutt" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(97, 327)
sprite_frames = SubResource("SpriteFrames_h82jx")
animation = &"ultcooldown"
autoplay = "ultcooldown"

[node name="Skill1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(437, 326.001)
sprite_frames = SubResource("SpriteFrames_okn2m")
animation = &"Skill1"
autoplay = "Skill1"

[node name="Skill2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(487, 326.001)
sprite_frames = SubResource("SpriteFrames_5q68d")
animation = &"Skill2"
autoplay = "Skill2"

[node name="Skill3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(536, 327.001)
sprite_frames = SubResource("SpriteFrames_hulyw")
animation = &"Skill3"
autoplay = "Skill3"

[node name="Jump" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(584, 327.001)
sprite_frames = SubResource("SpriteFrames_1pm42")
animation = &"Jump"
autoplay = "Jump"

[node name="ultwan" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 54.0
offset_top = 285.0
offset_right = 137.0
offset_bottom = 309.0
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "Ultimate Acitve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 429.0
offset_top = 343.0
offset_right = 701.0
offset_bottom = 374.0
rotation = -6.28319
scale = Vector2(0.722, 0.7)

[node name="Label" type="Label" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "down       "

[node name="Label2" type="Label" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "  up  "
vertical_alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "       right      "

[node name="Label4" type="Label" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "Spacebar"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 402.0
offset_top = 299.0
offset_right = 748.0
offset_bottom = 323.0
rotation = -6.28319
scale = Vector2(0.5, 0.5)

[node name="Label" type="Label" parent="HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "        Dash attack     "

[node name="Label2" type="Label" parent="HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = " Brain Shred     "
vertical_alignment = 1

[node name="Label3" type="Label" parent="HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "   Knockup        "

[node name="Label4" type="Label" parent="HBoxContainer2"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("3_wccsu")
theme_override_font_sizes/font_size = 19
text = "    Jump"
horizontal_alignment = 3
